<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jesusm.activeandroidsample.app.ui.activities.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/car_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            android:textSize="@dimen/text_medium"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/car_info_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:hint="@string/car_info_description_sample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/car_info_description"
                    android:textAppearance="?android:textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/wheel1_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:hint="@string/wheel_info_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:id="@+id/car_info_wheels_1"
                    android:textAppearance="?android:textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/wheel2_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:hint="@string/wheel_info_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:id="@+id/car_info_wheels_2"
                    android:textAppearance="?android:textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/wheel3_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:hint="@string/wheel_info_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:id="@+id/car_info_wheels_3"
                    android:textAppearance="?android:textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/wheel4_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:hint="@string/wheel_info_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:id="@+id/car_info_wheels_4"
                    android:textAppearance="?android:textAppearanceLarge" />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true">-->

    <!--<Button-->
    <!--android:id="@+id/button_read_data"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
    <!--android:id="@+id/button_write_data"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_height="wrap_content" />-->
    <!--</LinearLayout>-->

</RelativeLayout>
